--- a/src/main/resources/templates/code-generation.html
+++ b/src/main/resources/templates/code-generation.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title th:text="${errorTitle}">Генерация кодов</title>
+        <title>Генерация кодов</title>
         <link
             href="../static/css/bootstrap.min.css"
             th:href="@{/css/bootstrap.min.css}"
