--- a/src/main/resources/templates/errors/error.html
+++ b/src/main/resources/templates/errors/error.html
@@ -17,9 +17,7 @@
         />
     </head>
 
-    <body
-        class="min-vh-100 d-flex flex-column justify-content-center bg-gray-100"
-    >
+    <body class="min-vh-100 d-flex flex-column justify-content-center bg-main">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-9 col-lg-6 text-center mx-auto">
