--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -17,9 +17,7 @@
         />
     </head>
 
-    <body
-        class="min-vh-100 d-flex flex-column justify-content-center bg-gray-100"
-    >
+    <body class="min-vh-100 d-flex flex-column justify-content-center bg-main">
         <div class="container my-5">
             <div class="row text-center mb-3">
                 <h1 class="text-secondary fs-2">
