--- a/src/main/resources/templates/code-generation.html
+++ b/src/main/resources/templates/code-generation.html
@@ -17,9 +17,7 @@
         />
     </head>
 
-    <body
-        class="min-vh-100 d-flex flex-column justify-content-center bg-gray-100"
-    >
+    <body class="min-vh-100 d-flex flex-column justify-content-center bg-main">
         <div class="container">
             <div class="row mb-5">
                 <div class="col-12 text-center">
