--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -27,7 +27,7 @@
     --bs-modal-footer-border-color: var(--bs-danger-border-subtle);
 }
 
-/* Информационные блоки */
+/* Информационные блоки страницы входа для событий "выход" и "ошибка" */
 
 .login-logout {
     background-color: var(--bs-primary-bg-subtle);
