--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -5,149 +5,65 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Контакты</title>
-        <link
-            href="../static/css/bootstrap.min.css"
-            th:href="@{/css/bootstrap.min.css}"
-            rel="stylesheet"
-        />
-        <link
-            href="../static/css/style.css"
-            th:href="@{/css/style.css}"
-            rel="stylesheet"
-        />
+        <link href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+        <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
     </head>
 
-    <body class="min-vh-100 d-flex flex-column justify-content-center bg-main">
+    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-center bg-main">
+        <!-- Основная часть страницы -->
         <div class="container">
+            <!-- Форма создания и редактирования контактов -->
             <div class="row mb-5">
-                <form
-                    id="contactForm"
-                    action="#"
-                    th:action="@{/rest/contacts/save}"
-                    method="post"
-                    class="border rounded p-3"
-                >
-                    <input style="display: none" name="id" />
-                    <div
-                        class="d-flex flex-row flex-wrap align-items-center justify-content-center"
-                    >
-                        <div class="flex-grow-1 m-1">
-                            <label
-                                for="description"
-                                class="form-label text-secondary"
-                                >Описание</label
-                            >
-                            <input
-                                id="description"
-                                type="text"
-                                name="description"
-                                placeholder="ВКонтакте"
-                                class="form-control"
-                            />
+                <div class="col-12">
+                    <form id="contacts-form" action="#" th:action="@{/rest/contacts/save}" method="post" class="border rounded p-3">
+                        <input style="display: none" name="id" />
+                        <div class="d-flex flex-row flex-wrap align-items-center justify-content-center">
+                            <div class="flex-grow-1 m-1">
+                                <label for="contacts-form-description" class="form-label text-secondary">Описание</label>
+                                <input id="contacts-form-description" type="text" name="description" placeholder="ВКонтакте" class="form-control" />
+                            </div>
+                            <div class="flex-grow-1 m-1">
+                                <label for="contacts-form-contact" class="form-label text-secondary">Контакт</label>
+                                <input id="contacts-form-contact" type="text" name="contact" placeholder="bttps://vk.com" class="form-control" />
+                            </div>
+                            <!-- todo: margin top when small screen -->
+                            <div class="m-1 mt-auto">
+                                <button type="submit" class="btn btn-primary">Сохранить</button>
+                            </div>
                         </div>
-                        <div class="flex-grow-1 m-1">
-                            <label
-                                for="contact"
-                                class="form-label text-secondary"
-                                >Контакт</label
-                            >
-                            <input
-                                id="contact"
-                                type="text"
-                                name="contact"
-                                placeholder="bttps://vk.com"
-                                class="form-control"
-                            />
-                        </div>
-                        <!-- todo: margin top when small screen -->
-                        <div class="m-1 mt-auto">
-                            <button type="submit" class="btn btn-primary">
-                                Сохранить
-                            </button>
-                        </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
-            <div id="contactsDiv" class="row">
-                <div
-                    th:each="each, status : ${contacts}"
-                    class="text-start"
-                    th:classappend="${!status.last} ? 'mb-2'"
-                    th:id="${each.id}"
-                >
-                    <h4
-                        th:id="'description' + ${each.id}"
-                        class="text-secondary"
-                        th:text="${each.description}"
-                    >
-                        ВКонтакте
-                    </h4>
-                    <p
-                        th:id="'contact' + ${each.id}"
-                        class="text-dark break-all mb-2"
-                        th:text="${each.contact}"
-                    >
-                        bttps://some/very/very/very/very/very/long/link
-                    </p>
-                    <a
-                        th:id="'edit' + ${each.id}"
-                        href="#"
-                        class="text-secondary me-1"
-                        >Изменить</a
-                    >
-                    <a
-                        th:id="'delete' + ${each.id}"
-                        href="#"
-                        class="text-secondary ms-1"
-                        >Удалить</a
-                    >
-                    <hr th:if="${!status.last}" />
+            <!-- Список контактов -->
+            <div class="row">
+                <div class="col-12" id="contacts">
+                    <div th:each="each, status : ${contacts}" class="text-start" th:classappend="${!status.last} ? 'mb-2'" th:id="'contact-' + ${each.id}">
+                        <h4 th:id="'description-contact-' + ${each.id}" class="text-secondary" th:text="${each.description}">ВКонтакте</h4>
+                        <p th:id="'contact-contact-' + ${each.id}" class="text-dark break-all mb-2" th:text="${each.contact}">bttps://some/very/very/very/very/very/long/link</p>
+                        <a th:id="'edit-contact-' + ${each.id}" href="#" class="text-secondary me-1">Изменить</a>
+                        <a th:id="'delete-contact-' + ${each.id}" href="#" class="text-secondary ms-1">Удалить</a>
+                        <hr th:if="${!status.last}" />
+                    </div>
                 </div>
             </div>
         </div>
-        <div
-            class="modal fade"
-            id="errorModal"
-            tabindex="-1"
-            data-bs-backdrop="static"
-            aria-hidden="true"
-        >
-            <div
-                class="modal-dialog modal-dialog-centered modal-overriden-danger mx-auto"
-            >
+        <!-- Модальное окно ошибок -->
+        <div class="modal fade" id="error-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-overriden-danger mx-auto">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title fs-4" id="errorModalTitle">
-                            Ошибка
-                        </h1>
-                        <button
-                            type="button"
-                            class="btn-close"
-                            data-bs-dismiss="modal"
-                            aria-label="Close"
-                        ></button>
+                        <h1 class="modal-title fs-4" id="error-modal-title">Ошибка</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body fs-5" id="errorModalText">
-                        Здесь располагается короткое описание ошибки. Пример:
-                        "Минимальная длина почты - 8 символов, максимальная -
-                        256 символов"
-                    </div>
+                    <div class="modal-body fs-5" id="error-modal-text">Здесь располагается короткое описание ошибки. Пример: "Минимальная длина почты - 8 символов, максимальная - 256 символов"</div>
                     <div class="modal-footer">
-                        <button
-                            type="button"
-                            class="btn btn-secondary"
-                            data-bs-dismiss="modal"
-                        >
-                            Закрыть
-                        </button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- Скрипты -->
         <script src="../static/js/test2.js" th:src="@{/js/test2.js}"></script>
-        <script
-            src="../static/js/bootstrap.bundle.min.js"
-            th:src="@{/js/bootstrap.bundle.min.js}"
-        ></script>
+        <script src="../static/js/bootstrap.bundle.min.js" th:src="@{/js/bootstrap.bundle.min.js}"></script>
     </body>
 </html>
