--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,16 +5,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Вход</title>
-        <link
-            href="../static/css/bootstrap.min.css"
-            th:href="@{/css/bootstrap.min.css}"
-            rel="stylesheet"
-        />
-        <link
-            href="../static/css/style.css"
-            th:href="@{/css/style.css}"
-            rel="stylesheet"
-        />
+        <link href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+        <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
     </head>
 
     <body class="min-vh-100 d-flex flex-column justify-content-center bg-main">
@@ -35,43 +27,15 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-9 col-lg-6 mx-auto">
-                    <form
-                        action="#"
-                        th:action="@{/login/processing}"
-                        method="post"
-                        class="border rounded p-3 bg-gray-200"
-                    >
+                    <form action="#" th:action="@{/login/processing}" method="post" class="border rounded p-3 bg-gray-200">
                         <h2 class="text-secondary fs-4">Вход</h2>
                         <hr />
-                        <label
-                            for="email"
-                            class="form-label text-secondary fs-5"
-                            >Почта</label
-                        >
-                        <input
-                            type="email"
-                            name="email"
-                            id="email"
-                            class="form-control mb-2"
-                        />
-                        <label
-                            for="password"
-                            class="form-label text-secondary fs-5"
-                            >Пароль</label
-                        >
-                        <input
-                            type="password"
-                            name="password"
-                            id="password"
-                            class="form-control mb-4"
-                        />
+                        <label for="email" class="form-label text-secondary fs-5">Почта</label>
+                        <input type="email" name="email" id="email" class="form-control mb-2" />
+                        <label for="password" class="form-label text-secondary fs-5">Пароль</label>
+                        <input type="password" name="password" id="password" class="form-control mb-4" />
                         <hr />
-                        <button
-                            type="submit"
-                            class="text-center btn btn-lg btn-primary"
-                        >
-                            Войти
-                        </button>
+                        <button type="submit" class="text-center btn btn-lg btn-primary">Войти</button>
                     </form>
                 </div>
             </div>
