--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,90 +5,44 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Главная</title>
-        <link
-            href="../static/css/bootstrap.min.css"
-            th:href="@{/css/bootstrap.min.css}"
-            rel="stylesheet"
-        />
-        <link
-            href="../static/css/style.css"
-            th:href="@{/css/style.css}"
-            rel="stylesheet"
-        />
+        <link href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+        <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
     </head>
 
     <body class="min-vh-100 d-flex flex-column justify-content-center bg-main">
         <div class="container my-5">
             <div class="row text-center mb-3">
-                <h1 class="text-secondary fs-2">
-                    Приложение для мониторинга состояния здоровья пациентов с
-                    ЛАГ
-                </h1>
+                <h1 class="text-secondary fs-2">Приложение для мониторинга состояния здоровья пациентов с ЛАГ</h1>
             </div>
             <div class="row mb-5">
                 <div class="text-secondary fs-5">
                     <p>
-                        В целом, конечно, постоянный количественный рост и сфера
-                        нашей активности влечет за собой процесс внедрения и
-                        модернизации глубокомысленных рассуждений. Но
-                        стремящиеся вытеснить традиционное производство,
-                        нанотехнологии неоднозначны и будут заблокированы в
-                        рамках своих собственных рациональных ограничений.
+                        В целом, конечно, постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации глубокомысленных рассуждений. Но стремящиеся вытеснить традиционное производство, нанотехнологии
+                        неоднозначны и будут заблокированы в рамках своих собственных рациональных ограничений.
                     </p>
                     <p>
-                        Наше дело не так однозначно, как может показаться:
-                        базовый вектор развития говорит о возможностях
-                        инновационных методов управления процессами. Сложно
-                        сказать, почему независимые государства представляют
-                        собой не что иное, как квинтэссенцию победы маркетинга
-                        над разумом и должны быть заблокированы в рамках своих
-                        собственных рациональных ограничений.
+                        Наше дело не так однозначно, как может показаться: базовый вектор развития говорит о возможностях инновационных методов управления процессами. Сложно сказать, почему независимые государства представляют собой не что иное, как
+                        квинтэссенцию победы маркетинга над разумом и должны быть заблокированы в рамках своих собственных рациональных ограничений.
                     </p>
                     <p>
-                        Имеется спорная точка зрения, гласящая примерно
-                        следующее: некоторые особенности внутренней политики
-                        призывают нас к новым свершениям, которые, в свою
-                        очередь, должны быть преданы социально-демократической
-                        анафеме. Прежде всего, начало повседневной работы по
-                        формированию позиции требует от нас анализа поставленных
-                        обществом задач.
+                        Имеется спорная точка зрения, гласящая примерно следующее: некоторые особенности внутренней политики призывают нас к новым свершениям, которые, в свою очередь, должны быть преданы социально-демократической анафеме. Прежде всего,
+                        начало повседневной работы по формированию позиции требует от нас анализа поставленных обществом задач.
                     </p>
                     <p>
                         <!-- todo: change mx-3 -->
                         <a href="" class="text-secondary fs-4">Войти</a>
-                        <a href="" class="text-secondary mx-3 fs-4"
-                            >Зарегистрироваться</a
-                        >
+                        <a href="" class="text-secondary mx-3 fs-4">Зарегистрироваться</a>
                         <a href="" class="text-secondary fs-4">Подать заявку</a>
                     </p>
                 </div>
             </div>
             <div class="row mb-3">
-                <h2 class="text-secondary text-center fs-2">
-                    Контакты главного администратора
-                </h2>
+                <h2 class="text-secondary text-center fs-2">Контакты главного администратора</h2>
             </div>
             <div id="contactsDiv" class="row">
-                <div
-                    th:each="each, status : ${contacts}"
-                    class="text-start"
-                    th:classappend="${!status.last} ? 'mb-2'"
-                    th:id="${each.id}"
-                >
-                    <h4
-                        th:id="'description' + ${each.id}"
-                        class="text-secondary"
-                        th:text="${each.description}"
-                    >
-                        ВКонтакте
-                    </h4>
-                    <p
-                        th:id="'contact' + ${each.id}"
-                        class="text-dark break-all mb-2"
-                        th:text="${each.contact}"
-                    >
-                        bttps://some/very/very/very/very/very/long/link
-                    </p>
+                <div th:each="each, status : ${contacts}" class="text-start" th:classappend="${!status.last} ? 'mb-2'" th:id="${each.id}">
+                    <h4 th:id="'description' + ${each.id}" class="text-secondary" th:text="${each.description}">ВКонтакте</h4>
+                    <p th:id="'contact' + ${each.id}" class="text-dark break-all mb-2" th:text="${each.contact}">bttps://some/very/very/very/very/very/long/link</p>
                     <hr th:if="${!status.last}" />
                 </div>
             </div>
