Поправил стиль кода остальных страниц в соответствии с изменённым ограничением на длину строки для prettier.

--- a/src/main/resources/templates/errors/error.html
+++ b/src/main/resources/templates/errors/error.html
@@ -5,16 +5,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title th:text="${errorTitle}">Заголовок ошибки</title>
-        <link
-            href="../../static/css/bootstrap.min.css"
-            th:href="@{/css/bootstrap.min.css}"
-            rel="stylesheet"
-        />
-        <link
-            href="../../static/css/style.css"
-            th:href="@{/css/style.css}"
-            rel="stylesheet"
-        />
+        <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+        <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
     </head>
 
     <body class="min-vh-100 d-flex flex-column justify-content-center bg-main">
@@ -28,22 +20,14 @@
                         <hr />
                         <div class="my-2">
                             <p th:text="${errorText}" class="word-wrap fs-3">
-                                ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
-                                ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
-                                ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
-                                ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
-                                ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
+                                ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
+                                ТекстОшибки ТекстОшибки
                             </p>
                         </div>
                         <hr />
                         <div>
                             <p class="fs-3">
-                                <a
-                                    href="#"
-                                    th:href="@{/}"
-                                    class="text-secondary"
-                                    >На главную</a
-                                >
+                                <a href="#" th:href="@{/}" class="text-secondary">На главную</a>
                             </p>
                         </div>
                     </div>
