В соответствии с новой задумкой удалил неиспользуемые js-код, html-страницу, сервис, контроллер, репозиторий и сущность PageAccessSecurityCode. Переименовал js-файл по работе с контактами.

--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <!-- Скрипты -->
-        <script src="../static/js/test2.js" th:src="@{/js/test2.js}"></script>
+        <script src="../static/js/contacts.js" th:src="@{/js/contacts.js}"></script>
         <script src="../static/js/bootstrap.bundle.min.js" th:src="@{/js/bootstrap.bundle.min.js}"></script>
     </body>
 </html>
