--- a/src/main/resources/templates/hospital-registration.html
+++ b/src/main/resources/templates/hospital-registration.html
@@ -16,7 +16,7 @@
                 <div class="col-12">
                     <form action="#" th:action="@{/rest/hospitals/registration-request}" method="post" class="border rounded text-secondary fs-5 p-3 bg-gray-200">
                         <h2 class="fs-4">Заявка на регистрацию медицинского учреждения</h2>
-                        <hr />
+                        <hr class="mb-1" />
                         <div class="d-flex flex-row flex-wrap align-items-center justify-content-center mb-3">
                             <div class="flex-grow-1 m-1">
                                 <label for="lastname" class="form-label">Фамилия <span class="text-danger fs-6"> *</span></label>
