Добавил js-код для страницы hospital-registration.html.

--- a/src/main/resources/templates/hospital-registration.html
+++ b/src/main/resources/templates/hospital-registration.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <form action="#" th:action="@{/rest/hospital-registration-requests/save}" method="post" class="border rounded text-secondary fs-5 p-3 bg-gray-200">
+                    <form action="#" th:action="@{/rest/hospital-registration-requests/save}" method="post" class="border rounded text-secondary fs-5 p-3 bg-gray-200" id="hospital-registration-form">
                         <h2 class="fs-4">Заявка на регистрацию медицинского учреждения</h2>
                         <hr class="mb-1" />
                         <div class="d-flex flex-row flex-wrap align-items-center justify-content-center mb-3">
@@ -79,8 +79,7 @@
             </div>
         </div>
         <!-- Скрипты -->
-        <!-- todo: change to js-file specific for this file -->
-        <script src="../static/js/contacts.js" th:src="@{/js/contacts.js}"></script>
+        <script src="../static/js/hospital-registration.js" th:src="@{/js/hospital-registration.js}"></script>
         <script src="../static/js/bootstrap.bundle.min.js" th:src="@{/js/bootstrap.bundle.min.js}"></script>
     </body>
 </html>
